# munin

./: .gitignore  CLAUDE.md  README.md  deep-review-report.json  docker-compose.yml  pyproject.toml  takt-bulk-ingest-followups.md
.takt/: retro.md  stats.json
docs/: decisions.md  f1-smoke.md  f4-smoke.md  migration-docker-to-podman.md  plan.md
sql/: 001_schema.sql  002_fingerprint.sql  003_match_thoughts.sql  004_upsert_thought.sql  005_hit_tracking.sql
src/munin/cli/: main.py
src/munin/core/: chunker.py  config.py  db.py  embed.py  errors.py  ingest.py  logging.py  manifest.py  memory.py  scope.py
src/munin/mcp/: __init__.py  server.py
src/munin/mcp/prompts/: session_end.md  session_start.md
tasks/: epic-munin-v1.md  feature-core-python-module.md  feature-mcp-server.md  feature-sql-schema-rpc.md
tasks/archive/2026-04-12-quality-of-life/: feature-quality-of-life.md
tasks/archive/2026-04-12-sprint-2-cli-mcp/: feature-cli.md
tasks/archive/2026-04-13-bulk-ingest/: feature-bulk-ingest.md
tests/cli/: conftest.py  test_cli_smoke.py
tests/integration/: conftest.py  test_memory_integration.py
tests/mcp/: conftest.py  test_mcp_smoke.py
tests/unit/: conftest.py  test_chunker.py  test_cli_doctor.py  test_cli_import.py  test_cli_import_markdown.py  test_cli_projects_stats.py  test_cli_recall.py  test_cli_remember.py  test_cli_show_forget.py  test_config.py  test_db.py  test_embed.py  test_hit_tracking.py  test_ingest.py  test_logging.py  test_manifest.py  test_mcp_errors.py  test_mcp_server.py  test_memory_crud.py  test_recall.py  test_remember.py
(+1 files in other folders)
