[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "munin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "mcp[cli]>=1.0",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
munin = "munin.cli.main:app"
munin-mcp = "munin.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
